temporary turn on crawlHiddenElement